--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="Love-us">
             <h1>Our Customer Love Us</h1>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolar do amet sint. Velit officia consequat duis velit mollit Amet minim <br>mollit non  deserunt ullamco est sit aliqua dolar do amet sint. Velit officia consequat</p>
+            <p>Amet minim mollit non deserunt ullamco est sit Aliqua dolar do amet sint. Velit officia consequat duis velit mollit Amet minim <br>mollit non  deserunt ullamco est sit aliqua dolar do amet sint. Velit officia consequat</p>
             <div class="box-x">
                 <div class="box-y">
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolar do amet sint. Velit officia consequat duis enim velit mollit Amet minim mollit non deserunt ullamco est sit aliqua dolar do amet sint. Velit officia consequat duis enim velit mollit</p>
